# vbash

./: Cargo.toml  LICENSE  README.md
examples/: ai_agent.rs  basic.rs  custom_commands.rs  exec_options.rs  filesystem.rs  network.rs
src/: error.rs  lib.rs
src/ast/: arithmetic.rs  conditional.rs  mod.rs  word.rs
src/commands/: context.rs  hash.rs  mod.rs  search.rs  test_cmd.rs  yq.rs
src/commands/archive/: gzip.rs  mod.rs  tar.rs
src/commands/awk/: ast.rs  builtins.rs  eval.rs  expr.rs  lexer.rs  mod.rs  parser.rs  value.rs
src/commands/file_ops/: links.rs  ls.rs  metadata.rs  mod.rs  ops.rs  tree.rs
src/commands/jq/: ast.rs  builtins.rs  collection_builtins.rs  eval.rs  helpers.rs  lexer.rs  mod.rs  parser.rs  string_builtins.rs
src/commands/network/: mod.rs  parse.rs  request.rs  security.rs
src/commands/sed/: exec.rs  mod.rs  parser.rs  types.rs
src/commands/text/: compare.rs  diff.rs  field_ops.rs  format.rs  grep.rs  io.rs  mod.rs  sort.rs  transform.rs
src/fs/: memory.rs  mod.rs  mountable.rs  overlay.rs  path.rs  readwrite.rs  types.rs
src/interpreter/: arithmetic.rs  builtins.rs  builtins_io.rs  compound.rs  dispatch.rs  expand.rs  mod.rs  pattern.rs  state.rs
src/lexer/: heredoc.rs  mod.rs  operators.rs  token.rs  words.rs
src/parser/: compound.rs  mod.rs  word.rs
tests/: api.rs  archive.rs  arithmetic.rs  awk.rs  builtins.rs  control_flow.rs  error_paths.rs  file_ops.rs  glob.rs  grep.rs  integration.rs  jq.rs  jq_advanced.rs  redirections.rs  search.rs  security.rs  sed.rs  sort.rs  syntax.rs  text.rs  util.rs  variables.rs  yq.rs
(+5 files in other folders)
