[package]
name = "vbash"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "A virtual bash environment for AI agents"
repository = "https://github.com/iruizsalinas/vbash"
keywords = ["bash", "shell", "sandbox", "interpreter"]

[dependencies]
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde_json = "1"
filetime = "0.2"

[features]
default = []
network = ["dep:ureq"]

[dependencies.ureq]
version = "3"
optional = true

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These pedantic lints are too noisy for our codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
